[tool.poetry]
name = "llama-cpp"
version = "0.1.0"
description = ""
authors = ["Barton Rhodes <barton@bmorphism.xyz>"]
readme = "README.md"
packages = [{include = "llama"}]

[tool.poetry.dependencies]
python = "^3.10"
sentencepiece = "^0.1.97"
torch = "^1.13.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
